# nore

./: .gitignore  build.ts  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app_db/: 000237.ldb  000239.ldb  000242.ldb  LOG  LOG.old
runtimes/: bunx  node  npx  python  uvx
src/main/: index.ts  main.ts
src/main/events/: index.ts  windowEvents.ts
src/main/windows/: index.ts  mainWindow.ts  splashWindow.ts
src/preload/: index.ts
src/preload/api/: window.ts
src/renderer/: index.html  routeTree.gen.ts  splash.html
src/renderer/app/: main.tsx
src/renderer/app/contexts/: ThemeProvider.tsx
src/renderer/app/layouts/: layout.tsx  (+1 more)
src/renderer/components/: LeftSidebar.tsx  MainHeader.tsx  Middlebar.tsx  ProviderIcons.tsx  Test.tsx  index.ts  layout.tsx  markdown.tsx
src/renderer/routes/: __root.tsx  chat.tsx  index.lazy.tsx  mcp-servers.tsx
src/renderer/utils/: request.ts
src/rust/mcp-manager/: Cargo.toml  build.rs  index.d.ts  index.js  index.node  package.json
src/rust/mcp-manager/src/: error.rs  lib.rs  manager.rs  models.rs  workspace.rs  workspace_wrapper.rs  wrapper.rs
src/shared/: constants.ts
src/shared/config/: context.ts
src/shared/constants/: index.ts
src/shared/routers/: _app.ts  fileAttachments.ts  mcp.ts  ollama.ts  window.ts
src/shared/services/: fileAttachmentService.ts  ollamaService.ts
src/shared/trpc/: index.ts
src/shared/utils/: convertCommand.ts  useWindowState.ts
src/types/: ai.ts  chat.ts  defaultPrompts.ts  generalSettings.ts  global.d.ts  layout.d.ts  layoutSettings.ts
(+104 files in other folders)
