[package]
name = "mcp-manager"
version = "0.1.0"
edition = "2021"
description = "High-performance MCP server management library"

# Configure as a NAPI library
[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI dependencies
napi = { version = "2.14.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.14.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP protocol
rmcp = { version = "0.3", features = ["client", "transport-child-process"] }

# Concurrency
dashmap = "5.5"

# Process management
sysinfo = "0.30"

# Lazy static
lazy_static = "1.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"